force-app/main/default/objects/NCMT_Housing_Plan_Option__c/NCMT_Housing_Plan_Option__c.object-meta.xml
<CustomObject>
    <label>NCMT Housing Plan Option</label>
    <nameField>
        <displayFormat>Option-{00000}</displayFormat>
        <label>NCMT Housing Plan Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCMT Housing Plan Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>