force-app/main/default/objects/NCMT_Housing_Plan_Option__c/fields/Choice_Text__c.field-meta.xml
<CustomField>
    <fullName>Choice_Text__c</fullName>
    <inlineHelpText>Displayed to the user, brief description of the cost option.</inlineHelpText>
    <label>Choice Text</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>