force-app/main/default/objects/NCMT_Housing_Plan_Option__c/fields/NCMT_Housing_Plan_Option_Template__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Housing_Plan_Option_Template__c</fullName>
    <label>NCMT Housing Plan Option Template</label>
    <referenceTo>NCMT_Housing_Plan_Option_Template__c</referenceTo>
    <relationshipLabel>NCMT Housing Plan Options</relationshipLabel>
    <relationshipName>NCMT_Housing_Plan_Option_Choices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>