force-app/main/default/objects/NCMT_Housing_Plan_Option__c/fields/Recurs_on_TCO_Tenant_Renewal_Years__c.field-meta.xml
<CustomField>
    <fullName>Recurs_on_TCO_Tenant_Renewal_Years__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This cost will be added on the Retrofit years specified in the project&apos;s TCO Lifecycle Input in addition to the years specified in Replace Every X Years.</inlineHelpText>
    <label>Recurs on TCO Tenant Renewal Years</label>
    <type>Checkbox</type>
</CustomField>