force-app/main/default/objects/NCMT_Housing_Plan_Option__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <inlineHelpText>Sets the order the options will be displayed to users within a particular Template Record Type and Type.</inlineHelpText>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>