force-app/main/default/objects/NCMT_Housing_Plan_Option__c/fields/TCO_Default_Repair_Cost_Percentage__c.field-meta.xml
<CustomField>
    <fullName>TCO_Default_Repair_Cost_Percentage__c</fullName>
    <label>TCO Default Repair Cost (Percentage)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>