force-app/main/default/objects/NCMT_Housing_Plan_Option__c/fields/TCO_Default_Repair_Every_X_Years__c.field-meta.xml
<CustomField>
    <fullName>TCO_Default_Repair_Every_X_Years__c</fullName>
    <defaultValue>1</defaultValue>
    <label>TCO Default Repair Every X Years</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>